# Lo-qui

./: .gitignore  README.md  resources.txt  update.txt
client/: package-lock.json  package.json
client/app/: data.js  globals.css  layout.tsx  page.tsx
client/app/components/: message.tsx
server/: .env  Cargo.toml  Dockerfile  docker-compose.yaml  test_req.http
server/migrations/: 0001_chat_table.sql
server/src/: get.rs  main.rs  put.rs  schema.rs
server/src/routes/: get.rs  mod.rs  post.rs
