[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.17"
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "chrono"]} 
serde = "1.0.228"
tower-http = { version = "0.4", features = ["cors", "trace"] }
axum-server = "0.8.0"
dotenv = "0.15.0"
serde_json = "1.0.145"
chrono = "0.4.42"
